# torrent-api-clients

./: .gitignore  LICENSE  environment.yml  eztv_client.py  pyproject.toml  readme.md  tbp_client.py
.github/workflows/: ci.yml
legacy/: eztv_client.py  tpb_client.py
tests/: test_parsing.py
torrent_api_clients/: cli.py  config.py  models.py  utils.py
torrent_api_clients/clients/: __init__.py  eztv.py  tpb.py
